
<resources>
    <string name="app_name">Motiv</string>
    <string name="title_activity_main">MainActivity</string>

    <style name="stroke_width">2</style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">259084328108067</string>
    <string name="facebook_application_id">259084328108067</string>

    <string name="fb_login_protocol_scheme">fb259084328108067</string>

    <string name="username">username</string>
    <string name="tema_escuro">Mudar tema</string>
    <string name="sair">Sair</string>
    <string name="quote">Escreva uma frase</string>
    <string name="author">Autor</string>
    <string name="Welcome">Bem-vindo ao Motiv</string>
    <string name="titleone">A sua rede social para os amantes da poesia,você é livre para expressar-se com suas palavras!</string>
    <string name="connected">Sempre conectado</string>
    <string name="security">Segurança</string>
    <string name="safe">Seus dados estão seguros e não são compartilhadas com nenhum usuário, fique tranquilo é um ambiente seguro</string>
    <string name="you">Seu mundo</string>
    <string name="share">Compartilhe tudo o que imaginar, esse espaço é seu!</string>
    <string name="Imagine">Imagine</string>
    <string name="create">Use a imaginação e criatividade sem medo com a ferramenta de edição</string>
    <string name="sync">O Motiv está sempre sincronizado,sempre que um novo usuário posta algo,você pode visualiar no mesmo momento</string>
    <string name="start">Hora de começar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="reported">Esta frase foi denunciada e está sendo analisada.</string>
    <string name="title_home">Home</string>
    <string name="icon_info">user icon</string>
    <string name="alterar_nome">Alterar nome</string>
    <string name="apagar_posts">Apagar posts</string>
    <string name="apagar_conta">Apagar conta</string>
    <string name="remover_foto_de_perfil">Remover foto de perfil</string>
    <string name="foto_atualizada">Foto atualizada</string>
    <string name="vector">m118.19 6.81c-4.59 -4.59 -10.12 -6.88 -16.58 -6.88h-78.21c-6.46 0 -11.99 2.29 -16.58 6.88c-4.59 4.59 -6.88 10.12 -6.88 16.58v78.21c0 6.46 2.29 11.99 6.88 16.58c4.59 4.59 10.12 6.88 16.58 6.88h78.21c6.46 0 11.99 -2.3 16.58 -6.88c4.59 -4.59 6.88 -10.12 6.88 -16.58v-78.21c0 -6.46 -2.29 -11.99 -6.88 -16.58zm-80.13 97.89h-18.82v-56.54h18.82v56.54zm-1.71 -67.01c-1.95 1.87 -4.54 2.81 -7.74 2.81h-0.08c-3.1 0 -5.61 -0.94 -7.54 -2.81c-1.93 -1.87 -2.89 -4.2 -2.89 -6.97c0 -2.82 0.99 -5.16 2.97 -7.01c1.98 -1.85 4.55 -2.77 7.7 -2.77c3.15 0 5.68 0.92 7.58 2.77c1.9 1.85 2.88 4.18 2.93 7.01c0 2.77 -0.98 5.09 -2.93 6.97zm69.41 67.01h-18.82v-30.23c0 -8.53 -3.15 -12.79 -9.45 -12.79c-2.39 0 -4.4 0.67 -6.03 2c-1.63 1.33 -2.85 2.95 -3.67 4.85c-0.38 0.98 -0.57 2.5 -0.57 4.56v31.61h-18.82c0.16 -34.11 0.16 -52.96 0 -56.54h18.82v7.98c3.96 -6.19 9.58 -9.29 16.86 -9.29c6.52 0 11.76 2.15 15.73 6.44c3.96 4.29 5.95 10.62 5.95 18.98v32.43h-0z</string>
    <string name="creator_pic">creator profile image</string>
    <string name="creator">Creator</string>
    <string name="linkedinbutton">linkedinbutton</string>
    <string name="m_sica">Música</string>
    <string name="cita_o">Citação</string>
    <string name="motiva_o">Motivação</string>
    <string name="amor">Amor</string>
    <string name="_0">0</string>
    <string name="reference">reference</string>
    <string name="alterar">Alterar</string>
    <string name="salvando">Salvando...</string>
    <string name="clear">clear search field</string>
    <string name="pesquisar">Pesquisar...</string>
    <string name="vai_l_procura_o_que_quiser">Vai lá procura o que quiser</string>
    <string name="empty_search">empty search</string>
    <string name="criadores">Criadores</string>
    <string name="refer_ncias">Referências</string>
    <string name="artistas">Artistas</string>
    <string name="suporte">Suporte</string>
    <string name="suporrt_ad">Anúncio para ajudar o aplicativo</string>
    <string name="firebase">Desenvolvido com a ferramenta Firebase</string>
    <string name="motiv_desenvolvido_por_inlustris_em_2018_todos_os_direitos_reservados">Motiv desenvolvido por Inlustris em 2018, todos os direitos reservados</string>
    <string name="atuazlizando">Atualizando...</string>
    <string name="usepolicy">A Inlustris é contra qualquer propagação de ódio e manifestação que ferem os direitos básicos da vida, qualquer conteúdo que possa ferir e ser ofensivo será excluído e caso o usuário sofra número elevado de denúncias, será banido da rede social. Ao utilizar o Motiv o usuário concorda com as regras da comunidade e as punições que poderá sofrer caso quebre alguma das regras. As denúncias serão analisadas e caso não violem as regras da comunidade retornarão  ao aplicativo. Todas as frases denunciadas não são exibidas até que sejam analisadas. As regras que devem ser seguidas para a utilização do motiv: São vetadas estritamente quaisquer categorias de perseguição política e/ou religiosa, assim como também é indevido publicações de teor político(publicações de teor poderam ser apagadas); É proibido qualquer tipo de ataque pessoal a outros usuários, caso ocorra o agressor poderá ser banido do motiv; É proibido qualquer tipo de ataque a qualquer tipo de grupo social seja minoria ou não; É proibido a promoção de ataques que firam qualquer grupo e/ou pessoa, caso ocorra, não só o líder do ataque será banido mas como todos os atuantes também irão; Discriminação racial e/ou sexual não são toleradas e qualquer publicação que viole isso irá ser apagada e caso o usuário persista será banido; É proibida qualquer publicação com conteúdo sexual explícito, o usuário que a publicar será banido.</string>
    <string name="policyusetitle">Políticas de uso</string>
    <string name="privacypolicy">A Inlustris assegura a proteção dos dados do usuário, todos os dados coletados são utilizado apenas para o registro do usuário, são coletados o mínimo dos dados sendo eles o email(caso não seja feito registro pelo google ou facebook será necessário também uma senha) e nome do utilizador para que suas publicações possam ser identificadas. As informações do utilizador não será distrubuida para terceiros e nem compartilhadas para outros usuários. A única informação do usuário apresentada para todos os usuários é o seu nome de usuário e nada mais além disso.</string>
    <string name="privacypolicytitle">Políticas de privacidade</string>
    <string name="profile_intro">Aqui é o seu perfil, onde poderá ver todas suas postagens e se quiser apagá-las,alterar seu nome e foto de perfil</string>
    <string name="new_quoteintro">Aqui é o seu cantinho mágico, onde poderá criar suas frases!</string>
    <string name="home_intro">Esta é sua tela inicial, onde poderá ver todas as postagens ja feitas no motiv. Não esqueça, se quiser saber mais detalhes sobre as frases basta clicar nelas e caso queira ver a frase que gostou de forma única pressione ela.</string>
    <string name="undrawlogo"><![CDATA[https://firebasestorage.googleapis.com/v0/b/motiv-d16d1.appspot.com/o/apple-touch-icon.png?alt=media&token=453a25a6-4233-4775-80f5-ba2199646c2c]]></string>
    <string name="dribblelogo"><![CDATA[https://firebasestorage.googleapis.com/v0/b/motiv-d16d1.appspot.com/o/dribbble-ball-icon.png?alt=media&token=e1807e28-a1f1-4b08-ba68-9fe147a992e2]]></string>
    <string name="flaticonlogo"><![CDATA[https://firebasestorage.googleapis.com/v0/b/motiv-d16d1.appspot.com/o/q9RLNioS_400x400.jpg?alt=media&token=2355c614-790e-457e-a35f-ed2b858586e0]]></string>
    <string name="materialiologo"><![CDATA[https://firebasestorage.googleapis.com/v0/b/motiv-d16d1.appspot.com/o/ucVTUoPg_400x400.jpg?alt=media&token=80b85935-95d1-4ca8-9bca-9a84e8899e52]]></string>
</resources>
