<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:background="@color/transparent"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:contentDescription="@string/creator_pic"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/profilepic"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:src="@drawable/penguin" />
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_toEndOf="@id/profilepic"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bottom_line"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cargo"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/creator"
                android:textAlignment="center"
                android:textColor="@color/grey_700"
                android:textSize="18sp" />

            <ImageButton
                android:contentDescription="@string/linkedinbutton"
                android:id="@+id/linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:autoLink="web"
                android:background="@color/transparent"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:src="@drawable/ic_linkedin_sign"
                android:tint="@color/blue_600" />


        </LinearLayout>


    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/imagecard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">


    </android.support.v7.widget.CardView>


</android.support.v7.widget.CardView>