<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="0dp">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="Sobre nós"
        android:textStyle="bold" />
    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitoregular"
        android:text="Criado por"
        android:padding="10dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/creators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="Caio e Debora" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Referências"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:elevation="4dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_startup" />

            <TextView
                android:id="@+id/adtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="true"
                android:padding="10dp"
                android:text="@string/suporrt_ad"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <TextView
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="@string/motiv_desenvolvido_por_inlustris_em_2018_todos_os_direitos_reservados"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@mipmap/firebase"
                android:text="@string/firebase"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/designrecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:nestedScrollingEnabled="false" />



</LinearLayout>



